# src/CRM.Application/Auth/DTOs/RefreshTokenRequest.cs
@@ -4,6 +4,5 @@ namespace CRM.Application.Auth.DTOs;
 
 public sealed class RefreshTokenRequest
 {
-    [Required]
-    public string RefreshToken { get; set; } = string.Empty;
+    public string? RefreshToken { get; set; } = string.Empty;
 }
